# napari-plugin-test

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_plugin_test/: napari.yaml
src/napari_plugin_test/_tests/: test_reader.py  test_widget.py  test_writer.py
